--- a/index.html
+++ b/index.html
@@ -76,8 +76,38 @@
 
             <section role="region" aria-labelledby="css-questions">
                 <h2 id="css-questions">CSS Questions</h2>
+                <div class="formrow">
+                    <div class="question-block">
+                        <label for="q-r">Can you center an element horizontally and vertically within its parent using CSS Flexbox?</label>
+                    </div>
+                    <div class="answer">
+                        <select name="answer" id="q-r" required>
+                            <option value="">Select an option</option>
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select>
+                    </div>
+
+                    <div class="question-block">
+                        <label for="q1-r1">What CSS property would you use to create a drop shadow effect for a box?</label>
+                    </div>
+                    <div class="answer">
+                        <textarea name="textarea" id="q1-r1" rows="3" cols="2" placeholder="Type your answer here"></textarea>
+                    </div>
+                </div>
             </section>
+
+            <input type="submit" value="Send">
        </form>
     </main>
+
+    <footer>
+        <address>
+            <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+            San Francisco<br />
+            California<br />
+            USA
+        </address>
+    </footer>
 </body>
 </html>
