--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>HTML/CSS QUIZ</h1>
         <nav>
             <ul>
-                <li><a href="#student-info">INFO</a></li>
-                <li><a href="#html-questions">HTML</a></li>
-                <li><a href="#css-questions">CSS</a></li>
+                <li><a href="#student-info" accesskey="I">INFO</a></li>
+                <li><a href="#html-questions" accesskey="H">HTML</a></li>
+                <li><a href="#css-questions" accesskey="C">CSS</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
             <section role="region" aria-labelledby="student-info">
                 <h2 id="student-info">Student Info</h2>
                 <div class="info">
-                    <label for="name">Student Name:</label>
+                    <label for="name">Name:</label>
                     <input type="text" id="name" name="name">
                 </div>
 
@@ -92,12 +92,12 @@
                         <label for="q1-r1">What CSS property would you use to create a drop shadow effect for a box?</label>
                     </div>
                     <div class="answer">
-                        <textarea name="textarea" id="q1-r1" rows="3" cols="2" placeholder="Type your answer here"></textarea>
+                        <textarea name="textarea" id="q1-r1" rows="5" cols="24" placeholder="Type your answer here"></textarea>
                     </div>
                 </div>
             </section>
 
-            <input type="submit" value="Send">
+            <button type="submit">Send</button>
        </form>
     </main>
 
